--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,41 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blueprints</title>
-    <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" />
-    <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="/webjars/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="js/apimock.js"></script>
-    <script src="js/app.js"></script>
-    <script>
-        $(document).ready(function () {
-            app.init();
-        });
-    </script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css" />
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="/js/apimock.js"></script>
+    <script src="/js/apiclient.js"></script>
+    <script src="/js/app.js"></script>
 </head>
 <body>
 <div class="container mt-4">
-    <h1 class="mb-3">Blueprints</h1>
-    <div class="d-flex gap-2 align-items-center mb-3">
-        <label for="authorInput" class="visually-hidden">Author</label>
-        <input id="authorInput" type="text" class="form-control" placeholder="Enter author name" />
-        <button id="getBlueprintsBtn" class="btn btn-primary">Get blueprints</button>
-    </div>
-    <div id="selectedAuthor" class="mb-3" aria-live="polite"></div>
-    <div class="table-responsive">
-        <table id="blueprintsTable" class="table table-striped table-bordered">
-            <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Author</th>
-                <th scope="col">Points</th>
-            </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
+    <h1 class="mb-4">Blueprints</h1>
 
-    <div id="totalPoints" class="mt-2 fw-semibold"></div>
+    <div class="row">
+
+        <div class="col-md-6">
+            <div class="d-flex gap-2 align-items-center mb-4">
+                <label for="authorInput" class="form-label mb-0 fw-bold">Author</label>
+                <input id="authorInput" type="text" class="form-control" placeholder="JohnConnor" />
+                <button id="getBlueprintsBtn" class="btn btn-primary flex-shrink-0">Get blueprints</button>
+            </div>
+
+            <h2 id="selectedAuthor" class="h4" aria-live="polite"></h2>
+
+            <div class="table-responsive mb-3">
+                <table id="blueprintsTable" class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th scope="col">Blueprint name</th>
+                        <th scope="col">Number of points</th>
+                        <th scope="col">Open</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+
+            <div id="totalPoints" class="mt-3 fw-bold h5"></div>
+        </div>
+
+        <div class="col-md-6">
+            <h3 id="currentBlueprintName" class="h5 mb-2"></h3>
+            <canvas id="blueprintCanvas" width="600" height="400" style="border:1px solid #ccc; width:100%; height:auto;"></canvas>
+        </div>
+
+    </div>
 </div>
+
+<script>
+    $(function(){ // shorthand de document.ready
+        app.init();
+    });
+</script>
 </body>
 </html>
