--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,8 +13,6 @@
 
     <script src="/js/apimock.js"></script>
     <script src="/js/apiclient.js"></script>
-
-    <!-- CORREGIR: Cargar las clases en el orden correcto -->
     <script src="/js/canvas-renderer.js"></script>
     <script src="/js/ui-updater.js"></script>
     <script src="/js/event-handler.js"></script>
@@ -59,7 +57,6 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <!-- Las filas se generarán dinámicamente -->
                             </tbody>
                         </table>
                     </div>
@@ -68,7 +65,7 @@
                 </div>
             </div>
 
-            <!-- Botones de acciones - MOVER AQUÍ -->
+            <!-- Botones de acciones -->
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex gap-2 flex-wrap">
